fixed star separator, buttons on small screens and joke size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,11 @@ h1, h2, h3, h4, h5, h6 {
     font-family: xkcd;
 }
 
-hr.star-light, hr.star-primary {
+.star-light{
+    text-align: center;
+    position: relative;
+}
+.star-light hr, .star-primary hr{
     margin: 25px auto 30px;
     padding: 0;
     max-width: 250px;
@@ -47,36 +51,37 @@ hr.star-light, hr.star-primary {
     border-top: solid 5px;
     text-align: center;
     overflow: visible;
+    opacity: 1;
+}
+.star-light hr, .star-primary hr{
+    border-color: #dc612c;
 }
 
-hr.star-light:after, hr.star-primary:after {
-    content: "\f005";
-    //content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>');
+// hr.star-light:after, hr.star-primary:after {
+//     //content: "\f005";
+//     //content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>');
+//     display: inline-block;
+//     position: relative;
+//     top: -26px;
+//     padding: 0 .25em;
+//     //font-family: FontAwesome;
+//     //font-size: 2em;
+// }
+.star-light fa-icon{
     display: inline-block;
     position: relative;
-    top: -26px;
+    top: -52px;
     padding: 0 .25em;
-    font-family: FontAwesome;
-    font-size: 2em;
+    background-color: #194e6d;
+    font-size: 1.5em;
+
+    // position: relative;
+    // top: -46px;
+    // background: #194e6d;
+    // padding: 10px;
+
 }
 
-hr.star-light {
-    border-color: #fdfdfc;
-    ; }
-
-hr.star-light:after {
-    color: #fdfdfc;
-    ; background-color: #e0ebe8;
-}
-
-hr.star-primary {
-    border-color: #4ab19a;
-}
-
-hr.star-primary:after {
-    color: #4ab19a;
-    background-color: #fdfdfc;
-    ; }
 
 
 
@@ -120,22 +125,7 @@ section.success {
     background: #e0ebe8;
 }
 
-hr.star-light {
-    border-color: #194e6d;
-}
 
-hr.star-light:after {
-    color: #e0ebe8;
-    background-color: #194e6d;
-}
-
-hr.star-primary {
-    border-color: #194e6d;
-}
-
-hr.star-primary:after {
-    color: #194e6d;
-}
 
 .img-centered {
     margin: 0 auto;
@@ -165,9 +155,7 @@ hr.star-primary:after {
     text-transform: none;
 }
 
-hr.star-light, hr.star-primary {
-    border-color: #dc612c;
-}
+
 
 
 
